feat: add about page in main navigation

--- a/content/trees/navigation/main_nav.yaml
+++ b/content/trees/navigation/main_nav.yaml
@@ -1,4 +1,7 @@
 tree:
   -
+    id: 95b51fb8-1b83-45f5-b175-f046ed5c2cb7
+    entry: 9521360f-7881-4f1e-8433-78358f38ba30
+  -
     id: 4f688623-9d0c-4800-af6c-c1d51cd604ff
     entry: 90462584-9b4f-42ee-abc1-70273e1efdb5
