feat: add tags as taxonomy for the journal collection

--- a/content/collections/journal.yaml
+++ b/content/collections/journal.yaml
@@ -1,7 +1,10 @@
 title: Journal
 template: journal/show
 layout: layout
+taxonomies:
+  - tags
 revisions: false
+route: 'journal/{slug}'
 date: true
 sort_dir: asc
 default_status: draft
