feat: add about page in the pages collection

--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -3,3 +3,7 @@ tree:
     entry: home
   -
     entry: 5b23bf2a-aaa8-4aa8-a20e-609a4a037788
+  -
+    entry: 90462584-9b4f-42ee-abc1-70273e1efdb5
+  -
+    entry: 9521360f-7881-4f1e-8433-78358f38ba30
