--- a/content/taxonomies/tags.yaml
+++ b/content/taxonomies/tags.yaml
@@ -4,4 +4,6 @@ preview_targets:
     label: Term
     url: '{permalink}'
     refresh: true
+template: tags/index
+term_template: tags/show
 layout: layout
