feat: add tags index page to main nav

--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -7,3 +7,5 @@ tree:
     entry: 90462584-9b4f-42ee-abc1-70273e1efdb5
   -
     entry: 9521360f-7881-4f1e-8433-78358f38ba30
+  -
+    entry: c5ca3ca1-021a-4b58-bc16-d900117a14f2
