--- a/content/trees/navigation/main_nav.yaml
+++ b/content/trees/navigation/main_nav.yaml
@@ -5,3 +5,6 @@ tree:
   -
     id: 4f688623-9d0c-4800-af6c-c1d51cd604ff
     entry: 90462584-9b4f-42ee-abc1-70273e1efdb5
+  -
+    id: 266ba3c4-7020-4b91-9be3-0722e7d0199b
+    entry: c5ca3ca1-021a-4b58-bc16-d900117a14f2
