feat: implement audio player fieldset and add it to page and journal blueprints

--- a/resources/blueprints/collections/journal/journal.yaml
+++ b/resources/blueprints/collections/journal/journal.yaml
@@ -71,6 +71,8 @@ tabs:
               validate:
                 - required
           -
+            import: audio_player
+          -
             handle: template
             field:
               type: template
